{
    "name": "InputActions",
    "maps": [
        {
            "name": "Controls",
            "id": "fc6c685c-9088-4fd9-9f55-ca1f63f0ea2a",
            "actions": [
                {
                    "name": "Position",
                    "type": "Value",
                    "id": "646ad4fc-c022-4836-b49d-073b42afb7a9",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Delta",
                    "type": "Value",
                    "id": "08e89ce9-f8a4-4b41-ba3f-41a9ca9335d4",
                    "expectedControlType": "Delta",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "StartPosition",
                    "type": "Value",
                    "id": "b8592b50-4221-4847-bedb-27a9671fd7b2",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Press",
                    "type": "Button",
                    "id": "4fc60666-687a-49e7-a5c6-b66646697567",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Tap",
                    "type": "Button",
                    "id": "2786b954-c88c-4206-a182-28ea7c718768",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Hold",
                    "type": "Value",
                    "id": "66e522bd-b119-4f50-ba5f-9e612df5b6b5",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Hold",
                    "initialStateCheck": true
                },
                {
                    "name": "DeepTap",
                    "type": "Button",
                    "id": "74efce43-0c37-43c6-9cbd-f5baf6e15a39",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "TapCount",
                    "type": "Value",
                    "id": "ecffe3a3-ce15-42de-b5f2-41375f7c6b6e",
                    "expectedControlType": "Integer",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "PressStartTime",
                    "type": "Value",
                    "id": "4bbe6cd4-0adf-4219-b964-1ade55c4b2d3",
                    "expectedControlType": "Double",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "TouchData",
                    "type": "Value",
                    "id": "a1365831-8849-4c0d-8cb2-a63850821f47",
                    "expectedControlType": "Touch",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "d2b98084-88a1-417b-b630-d80cf3415cc2",
                    "path": "<Touchscreen>/primaryTouch/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Position",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "8f087d4d-59ac-4189-a11e-c5d7e995c59a",
                    "path": "<Touchscreen>/primaryTouch/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Delta",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f73985b7-f7a6-4922-992c-74e13e056143",
                    "path": "<Touchscreen>/Press",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Press",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "8fcc267b-264d-4a68-b6c8-92179513d6b6",
                    "path": "<Touchscreen>/primaryTouch/tap",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Tap",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d1bbd32b-dfe9-4a3c-932c-927e6762a865",
                    "path": "<Touchscreen>/Press",
                    "interactions": "SlowTap",
                    "processors": "",
                    "groups": "",
                    "action": "DeepTap",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "7e17f1a3-85a7-4b2d-820f-1de5171c535a",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "DeepTap",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "0d38a2b1-1259-458a-8c5b-b97e95eedfdd",
                    "path": "<Touchscreen>/primaryTouch/startPosition",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "StartPosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "7bd50da0-2412-4e13-bdc7-ee0803bc58bc",
                    "path": "<Touchscreen>/primaryTouch/tapCount",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TapCount",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "63ac77dd-c74d-4b26-a1df-61eebbb01d2c",
                    "path": "<Touchscreen>/primaryTouch/startTime",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PressStartTime",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b7e914a9-5590-4a75-bcee-1ce5813025f6",
                    "path": "<Touchscreen>/primaryTouch",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TouchData",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "42072774-afc1-46ac-8b3c-f50ac4b419a5",
                    "path": "<Touchscreen>/Press",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Hold",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}